--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vue-chartjs": "3.5.1",
     "vue-i18n": "8.28.2",
     "vue-meta": "^2.4.0",
-    "vue-router": "3.6.5",
+    "vue-router": "^3.6.5",
     "vue-router-prefetch": "1.6.3",
     "vue2-transitions": "0.3.0"
   },
