--- a/package.json
+++ b/package.json
@@ -36,11 +36,17 @@
     "eslint": "8.41.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-vue": "9.14.1",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "prettier": "2.8.8",
     "sass": "1.62.1",
     "sass-loader": "10.2.0",
     "vue-cli-plugin-i18n": "2.3.2",
-    "vue-template-compiler": "2.7.14"
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "browserslist": [
     "> 1%",
