--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "chart.js": "2.9.4",
+    "connect-history-api-fallback": "^2.0.0",
     "dangerous-html": "^0.1.13",
     "eslint-plugin-vue": "9.11.0",
+    "express": "^4.19.2",
     "register-service-worker": "^1.7.2",
     "vue": "2.7.14",
     "vue-chartjs": "3.5.1",
-    "vue-i18n": "8.28.2",
+    "vue-i18n": "^8.28.2",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.6.5",
     "vue-router-prefetch": "1.6.3",
