--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "register-service-worker": "^1.7.2",
     "vue": "2.7.14",
     "vue-chartjs": "3.5.1",
+    "vue-cli-plugin-i18n": "^2.3.2",
     "vue-i18n": "^8.28.2",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.6.5",
@@ -43,7 +44,6 @@
     "prettier": "2.8.8",
     "sass": "1.62.1",
     "sass-loader": "10.2.0",
-    "vue-cli-plugin-i18n": "2.3.2",
     "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.7.14",
     "webpack": "^5.91.0",
